Updated header part

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="intro-text">
                         <span class="name">Software Engineer</span>
                         <hr class="star-light">
-                        <span class="skills">Full Stack Developer</span>
+                        <span class="skills">Software Developer with 5.5+ years of industry experience| Graduate student at SJSU</span>
                     </div>
                 </div>
             </div>
